[package]
name = "romulus"
description = "a stream editor like sed"
version = "0.1.5"
authors = ["eulegang<eulegang@gmail.com>"]
repository = "https://github.com/eulegang/romulus"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = [ 'envvar' ]
envvar = []

[dependencies]
regex = "1"
clap = "~2.27.0"
lazy_static = "1.3.0"
tempfile = "3.1.0"
