[package]
name = "romulus"
description = "a stream editor like sed"
version = "0.1.11"
authors = ["eulegang<eulegang@gmail.com>"]
repository = "https://github.com/eulegang/romulus"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["text", "cli", "sed", "grep", "awk"]
categories = ["command-line-utilities", "text-processing"]

[badges.travis-ci]
repository = "eulegang/romulus"

[badges.maintenance]
status = "actively-developed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ 'envvar', 'color' ]
envvar = []
color = []
stdin-tty = []
bind = []

[dependencies]
regex = "1"
clap = "~2.33.0"
lazy_static = "1.3.0"
tempfile = "3.1.0"
atty = "0.2.13"
ansi_term = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

